syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.microservices.grpc.payment";
option java_outer_classname = "PaymentProto";

package payment;

service PaymentService {
    rpc ProcessPayment(ProcessPaymentRequest) returns (PaymentResponse);
    rpc GetPayment(GetPaymentRequest) returns (PaymentResponse);
    rpc GetPaymentsByOrder(GetPaymentsByOrderRequest) returns (PaymentsResponse);
    rpc UpdatePaymentStatus(UpdatePaymentStatusRequest) returns (PaymentResponse);
    rpc RefundPayment(RefundPaymentRequest) returns (PaymentResponse);
}

message PaymentResponse {
    int64 id = 1;
    int64 order_id = 2;
    double amount = 3;
    string currency = 4;
    string status = 5;
    string payment_method = 6;
    string transaction_id = 7;
    string created_at = 8;
    string updated_at = 9;
}

message ProcessPaymentRequest {
    int64 order_id = 1;
    double amount = 2;
    string currency = 3;
    string payment_method = 4;
}

message GetPaymentRequest {
    int64 id = 1;
}

message GetPaymentsByOrderRequest {
    int64 order_id = 1;
}

message PaymentsResponse {
    repeated PaymentResponse payments = 1;
}

message UpdatePaymentStatusRequest {
    int64 id = 1;
    string status = 2;
}

message RefundPaymentRequest {
    int64 id = 1;
}

